# vibezen

./: .claude_hooks_config.json  .gitignore  =2.5.0  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATION_COMPLETE.md  LICENSE  README.md  README_INTEGRATION.md  demo_vibezen.py  integration_patch.py  mis_adapter.py  optimized_quality_report.json  pyproject.toml  pytest.ini  quick_benchmark_result.json  requirements.txt  run_semantic_cache_tests.py  run_tests.py  self_quality_check.py  self_quality_check_improved.py  setup.py  test_circuit_breaker.py  test_detection_example.py  test_detector_standalone.py  test_improved_standalone.py  test_integration.py  test_integration_improved.py  test_quality_detection_demo.py  test_sequential_thinking.py  test_structured_logging.py  test_workflow_integration.py  ultra_fast_quality_report.json  vibezen.yaml  vibezen.yaml.example  vibezen_cli.py  vibezen_implementation_tasks.json  vibezen_quality_check.py
configs/: vibezen.yaml
docs/: ANTHROPIC_DISABLED.md  MIGRATION_GUIDE.md  PROVIDER_INTEGRATION.md  REDESIGN_SUMMARY.md  api_reference.md  best_practices.md  circuit_breaker.md  configuration.md  deterministic_seeding.md  enhanced_workflow_guide.md  metrics_monitoring.md  mis_mention_usage_guide.md  performance.md  sequential_thinking.md  structured_logging.md  troubleshooting.md  unified_workflow_shortcuts.md  workflow_integration.md
examples/: basic_usage.py  demo_prompt_intervention.py  mention_migration_demo.py  metrics_example.py  mis_mention_practical_examples.py  performance_demo.py  real_provider_demo.py  (+1 more)
(+146 files in other folders)
